[workspace]
members = [
    "chocho",
    "chocho_login",
    "chocho_msg",
    "chocho_client",
    "chocho_macros",
    "chocho_examples",
]

[patch.crates-io]
ricq = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
ricq-core = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
