[workspace]
resolver = "2"
members = [
    "chocho",
    "chocho_login",
    "chocho_msg",
    "chocho_client",
    "chocho_macros",
    "chocho_examples",
]

[workspace.dependencies]
ricq = { version = "0.1.20", features = ["image-detail"] }
ricq-core= { version = "0.1.20" }

[patch.crates-io]
ricq = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
ricq-core = { git = "https://github.com/Wybxc/ricq.git", branch = "chocho-patch" }
