[package]
name = "chocho"
version = "0.1.0"
edition = "2021"
description = "QQ client framework"
license = "MPL-2.0"
repository = "https://github.com/Wybxc/chocho"

[dependencies]
chocho_macros = { path = "../chocho_macros", version = "0.1.0" }

ricq = { version = "0.1.20", features = ["image-detail"] }
ricq-core= { version = "0.1.20" }

anyhow = "1.0.70"
async-trait = "0.1.68"
bytes = "1.4.0"
futures-util = "0.3.28"
hex = "0.4.3"
image = "0.24.6"
qrcode = "0.12.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
requestty = "0.5.0"

rqrr = "0.6.0"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["fs", "io-std", "rt-multi-thread"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
async-trait = "0.1.68"
