[package]
name = "chocho"
version = "0.1.0"
edition = "2021"
description = "QQ client framework"
license = "MPL-2.0"
repository = "https://github.com/Wybxc/chocho"

[dependencies]
chocho_macros = { path = "../chocho_macros", version = "0.1.0" }
chocho_login = { path = "../chocho_login", version = "0.1.0" }
chocho_msg = { path = "../chocho_msg", version = "0.1.0" }
chocho_client = { path = "../chocho_client", version = "0.1.0" }

ricq = { version = "0.1.20", features = ["image-detail"] }
ricq-core = { version = "0.1.20" }

async-trait = "0.1.68"
tokio = { version = "1.27.0", features = [
    "fs",
    "io-std",
    "signal",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3.16"
once_cell = "1.17.1"

[dev-dependencies]
tracing = "0.1.37"
anyhow = "1.0.70"
