[package]
name = "chocho_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chocho_msg = { path = "../chocho_msg", version = "0.1.0" }
async-trait = "0.1.68"

ricq = { version = "0.1.20", features = ["image-detail"] }

[dev-dependencies]
chocho = { path = "../chocho", version = "0.1.0" }