[package]
name = "chocho_login"
version = "0.1.0"
edition = "2021"
description = "QQ client framework"
license = "MPL-2.0"
repository = "https://github.com/Wybxc/chocho"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ricq = { version = "0.1.20", features = ["image-detail"] }

anyhow = "1.0.70"
bytes = "1.4.0"
futures-util = "0.3.28"
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["fs", "io-std"] }
tokio-util = "0.7.7"
tracing = "0.1.37"

image = { version = "0.24.6", optional = true }
rqrr = { version = "0.6.0", optional = true }
qrcode = { version = "0.12.0", optional = true }

requestty = { version = "0.5.0", optional = true }

[features]
show-qrcode = ["dep:image", "dep:rqrr", "dep:qrcode"]
interactive = ["requestty", "show-qrcode"]
default = ["show-qrcode", "interactive"]

[dev-dependencies]
tokio = { version = "1.27.0", features = ["rt"] }
